src/quickwidgets/qquickwidget_p.h
@@ -87,7 +87,6 @@ public:
     void createContext();
     void destroyContext();
     void handleContextCreationFailure(const QSurfaceFormat &format, bool isEs);
-    void createOffscreenSurface();
 
     GLuint textureId() const Q_DECL_OVERRIDE;
 
